fe-seoul/seoul-fe-deploy-svc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fe-deploy
  labels:
    app: fe-deploy
spec:
  containers:
  - name: fe-deploy
    image: 34.64.204.32:5000/nginx:latest
    ports:
    - containerPort: 
---
apiVersion: v1
kind: Service
metadata:
  name: fe-svc
spec:
  type: ClusterIP
  selector:
    app: fe-deploy
  ports:
  - protocol: TCP
    port: 8080
    targetPort:
